Moved swagger docs to /api/docs, updated README (completely removed Emitter), updated dependencies
