# docs/swagger.json
@@ -14,51 +14,6 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/key": {
-            "post": {
-                "security": [
-                    {
-                        "BasicAuth": []
-                    }
-                ],
-                "description": "Returns an [Emitter channel key](https://emitter.io/develop/getting-started/) for a specific channel and access mode.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "internal"
-                ],
-                "summary": "Request an Emitter key",
-                "parameters": [
-                    {
-                        "description": "Channel name and access modes string",
-                        "name": "message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.KeyRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "A valid private key for the requested channel",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "422": {
-                        "description": "When the request JSON is malformed"
-                    },
-                    "500": {
-                        "description": "When the kestore cannot retrieve the key"
-                    }
-                }
-            }
-        },
         "/nodes": {
             "get": {
                 "security": [
@@ -66,7 +21,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "Returns a list of all connected nodes by their hardware ID. Will time out in 500ms if any one of the nodes does not respond.",
+                "description": "Returns a list of all connected nodes by their hardware ID. Will time out in 300ms if any one of the nodes does not respond.",
                 "produces": [
                     "application/json"
                 ],
@@ -97,7 +52,7 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "Returns full stats from the node with given hardware ID. Will time out in 500ms the node does not respond.",
+                "description": "Returns full stats from the node with given hardware ID. Will time out in `300ms` if the node does not respond.",
                 "produces": [
                     "application/json"
                 ],
@@ -105,9 +60,18 @@
                     "nodes"
                 ],
                 "summary": "Get stats from a node",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Node hardware ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "Bare statistics for the node associated to the given ID",
+                        "description": "Full system statistics for the node associated to the given ID",
                         "schema": {
                             "$ref": "#/definitions/stats.Stats"
                         }
@@ -143,17 +107,6 @@
                 "uptime": {
                     "description": "Uptime of the system",
                     "type": "integer"
-                }
-            }
-        },
-        "types.KeyRequest": {
-            "type": "object",
-            "properties": {
-                "access": {
-                    "type": "string"
-                },
-                "channel": {
-                    "type": "string"
                 }
             }
         }
